force-app/main/default/objects/Discounts__c/Discounts__c.object-meta.xml
<CustomObject>
    <customHelpPage>Discount_Help_File</customHelpPage>
    <label>Discounts</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>