force-app/main/default/objects/Discounts__c/fields/AVG_Discount_All_Items__c.field-meta.xml
<CustomField>
    <fullName>AVG_Discount_All_Items__c</fullName>
    <formula>(Total_List_Price_All_Items__c-Account__r.Total_This_Year_Sales__c)/Total_List_Price_All_Items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG Discount % All Items</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>