force-app/main/default/objects/Discounts__c/fields/Avg_Discount_Regen__c.field-meta.xml
<CustomField>
    <fullName>Avg_Discount_Regen__c</fullName>
    <formula>( Total_List_Price_Regen__c  - Account__r.Regen_YTD__c )/ Total_List_Price_Regen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Discount % Regen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>