force-app/main/default/objects/Discounts__c/fields/Avg_Discount_Restorative__c.field-meta.xml
<CustomField>
    <fullName>Avg_Discount_Restorative__c</fullName>
    <formula>(Total_List_Price_Restorative__c - Account__r.Prosthetic_YTD__c)/Total_List_Price_Restorative__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Discount % Restorative</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>