force-app/main/default/objects/Discounts__c/fields/Discount_Description__c.field-meta.xml
<CustomField>
    <fullName>Discount_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discount Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>