force-app/main/default/objects/Discounts__c/fields/Total_List_Price_Regen__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Price_Regen__c</fullName>
    <label>Total List Price Regen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>